style: add min-height to prevent layout jump on load

--- a/src/pages/movie/Movie.module.css
+++ b/src/pages/movie/Movie.module.css
@@ -25,6 +25,7 @@
 }
 
 .poster {
+  min-height: 300px;
   border-radius: 0.5rem;
   margin-top: -6.25rem;
 }
